images folder and badges

--- a/logged_in_home_edit.html
+++ b/logged_in_home_edit.html
@@ -33,7 +33,7 @@
                         </a>
                         <ul class="dropdown-menu dropdown-menu-dark dropdown-menu-end" aria-labelledby="navbarDarkDropdownMenuLink">
                             <li><a class="dropdown-item" href="#">Your Profile</a></li>
-                            <li><a class="dropdown-item" href="#">Notifications</a></li>
+                            <li><a class="dropdown-item" href="#">Notifications<span class="ms-2 droptag badge rounded-pill bg-danger">99+</span></a></li>
                             <li><a class="dropdown-item" href="#">Your Tasks</a></li>
                             <li><a class="dropdown-item" href="#">Projects</a></li>
                             <li><a class="dropdown-item" href="#">Create New Tasks</a></li>
@@ -76,6 +76,7 @@
                     <label class="form-check-label" for="flexCheckDefault">
                     Flexbox
                     </label>
+                    <div class="float-end badge rounded-pill bg-danger">PAST DUE</div>
                 </div>
                 <div class="form-check bg-info text-white">
                     <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked>
@@ -95,6 +96,7 @@
                     <label class="form-check-label" for="flexCheckChecked">
                     Bootstrap
                     </label>
+                    <div class="float-end badge rounded-pill bg-warning">DUE TODAY</div>
                 </div>
                 <div class="form-check bg-primary text-white mb-1">
                     <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
