missed a taskcard footer

--- a/logged_in_home_edit.html
+++ b/logged_in_home_edit.html
@@ -157,7 +157,7 @@
                         <div class="col-7 ms-auto notebox">notes...<br>notes...<br>notes...<br>notes...<br>notes...<br>notes...</div>
                     </div>
                 </div>
-                <div class="w-100 bg-warning text-end text-white py-3" style="border-bottom-left-radius: 20px; border-bottom-right-radius: 20px;">
+                <div class="task-footer w-100 bg-warning text-end text-white py-3">
                     <button type="button" class="btn btn-info">Edit</button>
                     <button type="button" class="btn btn-danger mx-3">Delete</button>
                 </div>
