--- a/logged_in_home_edit.html
+++ b/logged_in_home_edit.html
@@ -39,7 +39,7 @@
                             <li><a class="dropdown-item" href="#">Create New Tasks</a></li>
                             <li><a class="dropdown-item" href="#">Teams</a></li>
                             <li><a class="dropdown-item" href="#">Help</a></li>
-                            <li><a class="dropdown-item" href="#">Sign out</a></li>
+                            <li><a class="dropdown-item" href="./home.html">Sign out</a></li>
                         </ul>
                     </li>
                 </ul>
