--- a/logged_in_home_edit.html
+++ b/logged_in_home_edit.html
@@ -136,7 +136,7 @@
         <div class="container-fluid p-5 mt-5">
         <div class="row justify-content-evenly row-cols-2 row-cols-xl-3 g-5">
             <div class="col p-0 taskcard">
-                <div class="w-100 bg-warning text-center text-white py-3" style="border-top-left-radius: 20px; border-top-right-radius: 20px;">
+                <div class="task-header w-100 bg-warning text-center text-white py-3">
                     Flexbox
                 </div>
                 <div class="card-body container shadow">
@@ -154,16 +154,16 @@
                     </div>
                     <div class="row">
                         <div class="col-3">Notes</div>
-                        <div class="col-7 ms-auto">notes...<br>notes...<br>notes...<br>notes...</div>
+                        <div class="col-7 ms-auto notebox">notes...<br>notes...<br>notes...<br>notes...<br>notes...<br>notes...</div>
                     </div>
                 </div>
-                <div class="w-100 bg-warning text-end text-white py-3" style="border-bottom-left-radius: 20px; border-bottom-right-radius: 20px;">
+                <div class="task-footer w-100 bg-warning text-end text-white py-3">
                     <button type="button" class="btn btn-info">Edit</button>
                     <button type="button" class="btn btn-danger mx-3">Delete</button>
                 </div>
             </div>
             <div class="col p-0 taskcard">
-                <div class="w-100 bg-primary text-center text-white py-3" style="border-top-left-radius: 20px; border-top-right-radius: 20px;">
+                <div class="task-header w-100 bg-primary text-center text-white py-3">
                     Grid
                 </div>
                 <div class="card-body container shadow">
@@ -181,16 +181,16 @@
                     </div>
                     <div class="row">
                         <div class="col-3">Notes</div>
-                        <div class="col-7 ms-auto">notes...<br>notes...<br>notes...<br>notes...</div>
+                        <div class="col-7 ms-auto notebox">notes...</div>
                     </div>
                 </div>
-                <div class="w-100 bg-primary text-end text-white py-3" style="border-bottom-left-radius: 20px; border-bottom-right-radius: 20px;">
+                <div class="task-footer w-100 bg-primary text-end text-white py-3">
                     <button type="button" class="btn btn-info">Edit</button>
                     <button type="button" class="btn btn-danger mx-3">Delete</button>
                 </div>
             </div>
             <div class="col p-0 taskcard">
-                <div class="w-100 bg-dark text-center text-white py-3" style="border-top-left-radius: 20px; border-top-right-radius: 20px;">
+                <div class="task-header w-100 bg-dark text-center text-white py-3">
                     CSS
                 </div>
                 <div class="card-body container shadow">
@@ -211,7 +211,7 @@
                         <div class="col-7 ms-auto">notes...<br>notes...<br>notes...<br>notes...</div>
                     </div>
                 </div>
-                <div class="w-100 bg-dark text-end text-white py-3" style="border-bottom-left-radius: 20px; border-bottom-right-radius: 20px;">
+                <div class="task-footer w-100 bg-dark text-end text-white py-3">
                     <button type="button" class="btn btn-info">Edit</button>
                     <button type="button" class="btn btn-danger mx-3">Delete</button>
                 </div>
@@ -219,7 +219,7 @@
         
 
             <div class="col p-0 taskcard">
-                <div class="w-100 bg-warning text-center text-white py-3" style="border-top-left-radius: 20px; border-top-right-radius: 20px;">
+                <div class="task-header w-100 bg-warning text-center text-white py-3">
                     Bootstrap
                 </div>
                 <div class="card-body container shadow">
@@ -240,13 +240,13 @@
                         <div class="col-7 ms-auto">notes...<br>notes...<br>notes...<br>notes...</div>
                     </div>
                 </div>
-                <div class="w-100 bg-warning text-end text-white py-3" style="border-bottom-left-radius: 20px; border-bottom-right-radius: 20px;">
+                <div class="task-footer w-100 bg-warning text-end text-white py-3">
                     <button type="button" class="btn btn-info">Edit</button>
                     <button type="button" class="btn btn-danger mx-3">Delete</button>
                 </div>
             </div>
             <div class="col p-0 taskcard">
-                <div class="w-100 bg-primary text-center text-white py-3" style="border-top-left-radius: 20px; border-top-right-radius: 20px;">
+                <div class="task-header w-100 bg-primary text-center text-white py-3">
                     API
                 </div>
                 <div class="card-body container shadow">
@@ -267,13 +267,13 @@
                         <div class="col-7 ms-auto">notes...<br>notes...<br>notes...<br>notes...</div>
                     </div>
                 </div>
-                <div class="w-100 bg-primary text-end text-white py-3" style="border-bottom-left-radius: 20px; border-bottom-right-radius: 20px;">
+                <div class="task-footer w-100 bg-primary text-end text-white py-3">
                     <button type="button" class="btn btn-info">Edit</button>
                     <button type="button" class="btn btn-danger mx-3">Delete</button>
                 </div>
             </div>
             <div class="col p-0 taskcard">
-                <div class="w-100 bg-dark text-center text-white py-3" style="border-top-left-radius: 20px; border-top-right-radius: 20px;">
+                <div class="task-header w-100 bg-dark text-center text-white py-3">
                     Database
                 </div>
                 <div class="card-body container shadow">
@@ -294,14 +294,14 @@
                         <div class="col-7 ms-auto">notes...<br>notes...<br>notes...<br>notes...</div>
                     </div>
                 </div>
-                <div class="w-100 bg-dark text-end text-white py-3" style="border-bottom-left-radius: 20px; border-bottom-right-radius: 20px;">
+                <div class="task-footer w-100 bg-dark text-end text-white py-3">
                     <button type="button" class="btn btn-info">Edit</button>
                     <button type="button" class="btn btn-danger mx-3">Delete</button>
                 </div>
             </div>
             
             <div class="col p-0 taskcard">
-                <div class="w-100 bg-warning text-center text-white py-3" style="border-top-left-radius: 20px; border-top-right-radius: 20px;">
+                <div class="task-header w-100 bg-warning text-center text-white py-3">
                     Data Information
                 </div>
                 <div class="card-body container shadow">
@@ -322,13 +322,13 @@
                         <div class="col-7 ms-auto">notes...<br>notes...<br>notes...<br>notes...</div>
                     </div>
                 </div>
-                <div class="w-100 bg-warning text-end text-white py-3" style="border-bottom-left-radius: 20px; border-bottom-right-radius: 20px;">
+                <div class="task-footer w-100 bg-warning text-end text-white py-3">
                     <button type="button" class="btn btn-info">Edit</button>
                     <button type="button" class="btn btn-danger mx-3">Delete</button>
                 </div>
             </div>
             <div class="col p-0 taskcard">
-                <div class="w-100 bg-primary text-center text-white py-3" style="border-top-left-radius: 20px; border-top-right-radius: 20px;">
+                <div class="task-header w-100 bg-primary text-center text-white py-3">
                     Javascript
                 </div>
                 <div class="card-body container shadow">
@@ -349,13 +349,13 @@
                         <div class="col-7 ms-auto">notes...<br>notes...<br>notes...<br>notes...</div>
                     </div>
                 </div>
-                <div class="w-100 bg-primary text-end text-white py-3" style="border-bottom-left-radius: 20px; border-bottom-right-radius: 20px;">
+                <div class="task-footer w-100 bg-primary text-end text-white py-3">
                     <button type="button" class="btn btn-info">Edit</button>
                     <button type="button" class="btn btn-danger mx-3">Delete</button>
                 </div>
             </div>
             <div class="col p-0 taskcard">
-                <div class="w-100 bg-dark text-center text-white py-3" style="border-top-left-radius: 20px; border-top-right-radius: 20px;">
+                <div class="task-header w-100 bg-dark text-center text-white py-3">
                     React
                 </div>
                 <div class="card-body container shadow">
@@ -376,7 +376,7 @@
                         <div class="col-7 ms-auto">notes...<br>notes...<br>notes...<br>notes...</div>
                     </div>
                 </div>
-                <div class="w-100 bg-dark text-end text-white py-3" style="border-bottom-left-radius: 20px; border-bottom-right-radius: 20px;">
+                <div class="task-footer w-100 bg-dark text-end text-white py-3">
                     <button type="button" class="btn btn-info">Edit</button>
                     <button type="button" class="btn btn-danger mx-3">Delete</button>
                 </div>
