--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-          <img src="./image/abs-task-management-high-resolution-logo-transparent.png" style="width: 80px; margin-left:20px">
+          <img src="./image/abs-task-management-high-resolution-logo-transparent (1).png" style="width: 140px; margin-left:60px">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
