--- a/logged_in_home_edit.html
+++ b/logged_in_home_edit.html
@@ -14,7 +14,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container-fluid">
             <a class="navbar-brand" href="./logged_in_home.html">
-                <img src="./image/abs-task-management-high-resolution-logo-transparent.png" style="width: 60px; margin-left: 20px">
+                <img src="./image/abs-task-management-high-resolution-logo-transparent (1).png" style="width: 140px; margin-left: 60px">
             </a>
             <button class="navbar-toggler" 
             type="button" 
