--- a/home.html
+++ b/home.html
@@ -38,7 +38,7 @@
     </nav>
     <main class="container my-5">
       <section class="row bg-secondary rounded border p-4 my-5" id="slideshow">
-        <h3 class="text-light">Tasks</h3>
+        <h3 class="text-light">Features</h3>
 
         <div id="carouselAutoplaying" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
@@ -48,13 +48,13 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active p-5 my-3">
-                    <a href="#Create" target="_blank"><img src="./image/carousel_dashboard.png" class="d-block w-100" alt="Carousel Item"></a>
+                    <a href="#Create" target="_blank"><img src="./image/carousel_dashboard.png" class="d-block w-100" style="height: 38rem;" alt="Carousel Item"></a>
                 </div>
                 <div class="carousel-item p-5 my-3">
-                    <a href="#Create" target="_blank"><img src="./image/carousel_detail.png" class="d-block w-100" alt="Carousel Item"></a>
+                    <a href="#Create" target="_blank"><img src="./image/carousel_detail.png" class="d-block w-100" style="height: 38rem;" alt="Carousel Item"></a>
                 </div>
                 <div class="carousel-item p-5 my-3">
-                    <a href="#Create" target="_blank"><img src="./image/create_tasks.png" class="d-block w-100" alt="Carousel Item"></a>
+                    <a href="#Create" target="_blank"><img src="./image/create_tasks.png" class="d-block w-100" style="height: 38rem;" alt="Carousel Item"></a>
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselAutoplaying" data-bs-slide="prev">
@@ -67,17 +67,18 @@
             </button>
         </div>
       </section>
-
+      <div class="dropdown-divider bg-primary my-5"></div>
       <section class="row bg-secondary rounded text-white p-3 my-5 g-3">
-        <h4 class="text-">Features</h4>
+        <h4 class="text-">Detailed Features</h4>
         <div class="row row-cols-1 row-cols-md-3 g-3">
             <div class="col-12 col-md-4">
                 <div class="card bg-light">
                     <div class="card-body">
                       <blockquote class="blockquote mb-0">
-                        <p><a href="" target="_blank"><img src="./image/detail.png" class="d-block img-fluid" alt="Feature"></a></p>
+                        <p><a href="" target="_blank"><img src="./image/detail.png" class="d-block img-fluid"  style="height: 23rem;" alt="Feature"></a></p>
                       </blockquote>
                       <div class="card-footer pt-4">
+                        <h4 class="text-dark">Details Page</h4>
                         <p class="text-dark">Using our app, you can create tasks and set things like: due dates, status, priority, and add detailed notes. </p>
                       </div>
                     </div>
@@ -88,9 +89,10 @@
                 <div class="card bg-light">
                     <div class="card-body">
                       <blockquote class="blockquote mb-0">
-                        <p><a href="#" target="_blank"><img src="./image/dashboard.png" class="d-block img-fluid" alt="Feature"></a></p>
+                        <p><a href="#" target="_blank"><img src="./image/dashboard.png" class="d-block img-fluid" style="height: 22rem;" alt="Feature"></a></p>
                       </blockquote>
                       <div class="card-footer pt-4">
+                        <h4 class="text-dark">Dashboard Page</h4>
                         <p class="text-dark">In our tasks page, there is a sidebar dashboard that shows you your tasks with banners showing if the task is late or due soon. There is also a search bar to find tasks easier.</p>
                       </div>
                     </div>
@@ -101,9 +103,10 @@
                 <div class="card bg-light">
                     <div class="card-body">
                       <blockquote class="blockquote mb-0">
-                        <p><a href="#" target="_blank"><img src="./image/create_tasks.png" class="d-block img-fluid" alt="Feature"></a></p>
+                        <p><a href="#" target="_blank"><img src="./image/create_tasks.png" class="d-block img-fluid" style="height: 24rem;" alt="Feature"></a></p>
                       </blockquote>
                       <div class="card-footer pt-4">
+                        <h4 class="text-dark">Create Task Page</h4>
                         <p class="text-dark">Creating a new task is simple and easy, fill out each line and press create!</p>
                       </div>
                     </div>
