cleaned up file structure

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-          <img src="./image/abs-task-management-high-resolution-logo-transparent (1).png" style="width: 140px; margin-left:60px">
+          <img src="./static/images/logo.png" style="width: 140px; margin-left:60px">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -49,13 +49,13 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active p-5 my-3">
-                    <a href="#Create" target="_blank"><img src="./image/carousel_dashboard.png" class="d-block w-100" alt="Carousel Item"></a>
+                    <a href="#Create" target="_blank"><img src="./static/images/carousel_dashboard.png" class="d-block w-100" alt="Carousel Item"></a>
                 </div>
                 <div class="carousel-item p-5 my-3">
-                    <a href="#Create" target="_blank"><img src="./image/carousel_detail.png" class="d-block w-100" alt="Carousel Item"></a>
+                    <a href="#Create" target="_blank"><img src="./static/images/carousel_detail.png" class="d-block w-100" alt="Carousel Item"></a>
                 </div>
                 <div class="carousel-item p-5 my-3">
-                    <a href="#Create" target="_blank"><img src="./image/create_tasks.png" class="d-block w-100" alt="Carousel Item"></a>
+                    <a href="#Create" target="_blank"><img src="./static/images/create_tasks.png" class="d-block w-100" alt="Carousel Item"></a>
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselAutoplaying" data-bs-slide="prev">
@@ -76,7 +76,7 @@
                 <div class="card bg-light">
                     <div class="card-body">
                       <blockquote class="blockquote mb-0">
-                        <p><a href="" target="_blank"><img src="./image/detail.png" class="d-block img-fluid" alt="Feature"></a></p>
+                        <p><a href="" target="_blank"><img src="./static/images/detail.png" class="d-block img-fluid" alt="Feature"></a></p>
                       </blockquote>
                       <div class="card-footer pt-4">
                         <p class="text-dark">Using our app, you can create tasks and set things like: due dates, status, priority, and add detailed notes. </p>
@@ -89,7 +89,7 @@
                 <div class="card bg-light">
                     <div class="card-body">
                       <blockquote class="blockquote mb-0">
-                        <p><a href="#" target="_blank"><img src="./image/dashboard.png" class="d-block img-fluid" alt="Feature"></a></p>
+                        <p><a href="#" target="_blank"><img src="./static/images/dashboard.png" class="d-block img-fluid" alt="Feature"></a></p>
                       </blockquote>
                       <div class="card-footer pt-4">
                         <p class="text-dark">In our tasks page, there is a sidebar dashboard that shows you your tasks with banners showing if the task is late or due soon. There is also a search bar to find tasks easier.</p>
@@ -102,7 +102,7 @@
                 <div class="card bg-light">
                     <div class="card-body">
                       <blockquote class="blockquote mb-0">
-                        <p><a href="#" target="_blank"><img src="./image/create_tasks.png" class="d-block img-fluid" alt="Feature"></a></p>
+                        <p><a href="#" target="_blank"><img src="./static/images/create_tasks.png" class="d-block img-fluid" alt="Feature"></a></p>
                       </blockquote>
                       <div class="card-footer pt-4">
                         <p class="text-dark">Creating a new task is simple and easy, fill out each line and press create!</p>
