cleaned up file structure

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                 <div class="invalid-feedback">Please enter a valid username</div>
               </div>
               <div class="col-md-4">
-                <a href="./logged_in_home_edit.html"> <button type="button" class="btn btn-primary">Register</button></a>
+                <a href="./tasks.html"> <button type="button" class="btn btn-primary">Register</button></a>
               </div>
               <div class="col-md-4">
                 <p>already have an account? <a href="./login.html">Login here</a></p>
