--- a/login.html
+++ b/login.html
@@ -28,12 +28,12 @@
                 <div class="invalid-feedback">Please enter a valid username</div>
               </div>
               <div class="col-md-4">
-                <a href="./logged_in_home_edit.html"><button type="button" class="btn btn-primary">Login</button></a>
-              <a href="./home.html"><button type="button" class="btn btn-danger">Back</button></a>
+                <a href="./tasks.html"><button type="button" class="btn btn-primary">Login</button></a>
+              <a href="./index.html"><button type="button" class="btn btn-danger">Back</button></a>
               </div>
             </div>
             <div class="col-md-4">
-                <p>Don't have an account? <a href="./home.html#Registration">Register here</a></p>
+                <p>Don't have an account? <a href="./index.html#Registration">Register here</a></p>
               </div>
           </form>
     </main>
