--- a/tasks.html
+++ b/tasks.html
@@ -13,7 +13,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="./logged_in_home.html">
+            <a class="navbar-brand" href="#">
                 <img src="./static/images/logo.png" style="width: 140px; margin-left: 60px">
             </a>
             <button class="navbar-toggler" 
@@ -39,7 +39,7 @@
                             <li><a class="dropdown-item" href="#"><i class="fas fa-plus"></i> Create New Tasks</a></li>
                             <li><a class="dropdown-item" href="#"><i class="fas fa-people-group"></i> Teams</a></li>
                             <li><a class="dropdown-item" href="#"><i class="fas fa-circle-info"></i> Help</a></li>
-                            <li><a class="dropdown-item" href="./home.html"><i class="fas fa-right-from-bracket"></i> Sign out</a></li>
+                            <li><a class="dropdown-item" href="./index.html"><i class="fas fa-right-from-bracket"></i> Sign out</a></li>
                         </ul>
                     </li>
                 </ul>
