--- a/tasks.html
+++ b/tasks.html
@@ -36,7 +36,7 @@
                             <li><a class="dropdown-item" href="#"><i class="fas fa-message"></i> Notifications<span class="ms-2 droptag badge rounded-pill bg-danger">99+</span></a></li>
                             <li><a class="dropdown-item" href="#"><i class="fas fa-list-check"></i> Your Tasks</a></li>
                             <li><a class="dropdown-item" href="#"><i class="fas fa-diagram-project"></i> Projects</a></li>
-                            <li><a class="dropdown-item" href="#"><i class="fas fa-plus"></i> Create New Tasks</a></li>
+                            <li><a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#makeTask"><i class="fas fa-plus"></i> Create New Tasks</a></li>
                             <li><a class="dropdown-item" href="#"><i class="fas fa-people-group"></i> Teams</a></li>
                             <li><a class="dropdown-item" href="#"><i class="fas fa-circle-info"></i> Help</a></li>
                             <li><a class="dropdown-item" href="./index.html"><i class="fas fa-right-from-bracket"></i> Sign out</a></li>
